# Predictive-MaintenanceV1

./: .gitignore  CLAUDE.md  README.md  Untitled.ipynb  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  stepA_data_integrity.patch
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
.pytest_cache/: .gitignore
.streamlit/: config.toml
data/: README.md
docs/: CHARTER.md  DATA_NOTES.md  DEMO_SCRIPT.md  DIAGNOSTIC_FIXES_PLAN.md  PID_STRIP_FIX_PLAN.md  PLAN.md  REAL_FAULT_COLLECTION.md  ROOMSTER_PASS2_FIXES.md  ROOMSTER_PASS3_FIXES.md  ROOMSTER_READINESS_PLAN.md  TESTING_PHASE_PLAN.md  UI_FIXES_PLAN.md  UI_REDESIGN_PLAN.md  WEEK_01.md  WEEK_02.md  WEEK_03.md  WEEK_04.md  WEEK_05.md  WEEK_06.md  WEEK_07.md  WEEK_08.md  data_audit_2026-04-28.txt
models/: MODEL_VERSIONS.md  README.md  ahmed_normalizer.pkl  car_None_normalizer.json  car_None_normalizer.pkl  forecaster_v1.pkl  isolation_forest_v1.pkl  my_test_vehicle_normalizer.json  my_test_vehicle_normalizer.pkl  pid_forecaster_v1.pkl  rf_classifier_v1.pkl  xgb_classifier_v1.pkl  yaris_2014_normalizer.json  yaris_2014_normalizer.pkl
notebooks/: 01_data_exploration.ipynb  check_all_files.py  checking.ipynb  import.ipynb  phase1_eda.ipynb
results/: README.md  anomaly_v1_results.json  forecaster_v1_results.json  latency_v1.json  lofo_eval.json  loso_cv_results.json  pid_forecaster_v1_results.json  rf_classifier_v1_results.json  withheld_coeff_results.json  xgb_classifier_v1_results.json
scripts/: acceptance_healthy_drive.py  adapt_app_csv.py  adapt_torque_csv.py  audit_carobd.py  cross_vehicle_eval.py  (+17 more)
(+211 files in other folders)
