[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "predictive-maintenance"
version = "0.1.0"
description = "OBD-II predictive maintenance: fault classification and severity forecasting"
requires-python = ">=3.11,<3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
# Run pytest from the repo root and let it find tests in the tests/ folder.
testpaths = ["tests"]
# Treat the repo root as importable, so `from src.data_loading import ...` works.
pythonpath = ["."]
